// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentInstanceTableTest renders default instance table header disabled with instance 1`] = `
<InsightsCommandButton
  disabled={true}
  iconProps={
    Object {
      "iconName": "skypeCheck",
    }
  }
  onClick={[Function]}
>
  Pass unmarked instances
</InsightsCommandButton>
`;

exports[`AssessmentInstanceTableTest renders default instance table header disabled without instance 1`] = `
<InsightsCommandButton
  disabled={true}
  iconProps={
    Object {
      "iconName": "skypeCheck",
    }
  }
  onClick={[Function]}
>
  Pass unmarked instances
</InsightsCommandButton>
`;

exports[`AssessmentInstanceTableTest renders default instance table header enabled 1`] = `
<InsightsCommandButton
  disabled={false}
  iconProps={
    Object {
      "iconName": "skypeCheck",
    }
  }
  onClick={[Function]}
>
  Pass unmarked instances
</InsightsCommandButton>
`;
